--- a/platformio.ini
+++ b/platformio.ini
@@ -1,7 +1,9 @@
-[env:arduino]
-platform = atmelavr
-board = uno
+[env:esp32-s3-devkitc-1]
+platform = espressif32
+board = esp32-s3-devkitc1-n8r2
 framework = arduino
+
+src_dir = examples
 
 lib_deps =
     Wire
